Lectura DDBB y Lectura Excel

--- a/noti_correo.ipynb
+++ b/noti_correo.ipynb
@@ -13,140 +13,176 @@
    "id": "d8c21581",
    "metadata": {},
    "source": [
-    "### Conexión con la base de datos PostGreSQL"
+    "### Conexión con la base de datos PostGreSQL 🐘"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "472df624",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import credenciales\n",
-    "#Librerias e Inicio de variables\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import psycopg2\n",
     "import sys, os\n",
-    "import datetime as dt"
+    "import datetime as dt\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "ddeada12",
+   "execution_count": 19,
+   "id": "fabdeb44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Obtener credenciales del entorno\n",
+    "DB_HOST = os.getenv('DB_HOST')\n",
+    "DB_PORT = os.getenv('DB_PORT') # psycopg2 maneja el string del puerto\n",
+    "DB_DATABASE = os.getenv('DB_DATABASE')\n",
+    "DB_USER = os.getenv('DB_USER')\n",
+    "DB_PASSWORD = os.getenv('DB_PASSWORD')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d28b7b94",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Jreyesm\\Desktop\\noti_correo\\credenciales.py\n"
+      "Intentando conectar a la base de datos...\n",
+      "¡Conexión a la base de datos establecida correctamente!\n",
+      "\n",
+      "--- Consulta SQL cargada ---\n",
+      "SELECT h.* FROM api.historialsolicitud AS h\n",
+      "---------------------------\n",
+      "\n",
+      "Ejecutando la consulta...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jreyesm\\AppData\\Local\\Temp\\ipykernel_22808\\2079815226.py:45: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  dfi1 = pd.read_sql_query(Query, conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cursor cerrado.\n",
+      "Conexión a la base de datos cerrada.\n"
      ]
     }
    ],
    "source": [
-    "print(credenciales.__file__)\n"
+    "# --- Función para cargar la consulta SQL desde un archivo ---\n",
+    "def load_sql_query(query_filename, query_dir='sql_queries'):\n",
+    "   \n",
+    "    current_dir = os.getcwd()\n",
+    "    query_path = os.path.join(current_dir, query_dir, query_filename)\n",
+    "\n",
+    "    try:\n",
+    "        with open(query_path, 'r', encoding='utf-8') as file:\n",
+    "            sql_query = file.read()\n",
+    "        return sql_query\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: El archivo de consulta '{query_path}' no se encontró.\")\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error al leer el archivo de consulta '{query_path}': {e}\")\n",
+    "        return None\n",
+    "\n",
+    "conn = None\n",
+    "cur = None\n",
+    "\n",
+    "try:\n",
+    "    # 1. Establecer la conexión a la base de datos\n",
+    "    print(\"Intentando conectar a la base de datos...\")\n",
+    "    conn = psycopg2.connect(\n",
+    "        host=DB_HOST,\n",
+    "        port=DB_PORT,\n",
+    "        database=DB_DATABASE,\n",
+    "        user=DB_USER,\n",
+    "        password=DB_PASSWORD\n",
+    "    )\n",
+    "    cur = conn.cursor()\n",
+    "    print(\"¡Conexión a la base de datos establecida correctamente!\")\n",
+    "\n",
+    "    # 2. Cargar la consulta SQL desde el archivo\n",
+    "    Query = load_sql_query('historialsolicitud.sql')\n",
+    "\n",
+    "    if Query:\n",
+    "        print(\"\\n--- Consulta SQL cargada ---\")\n",
+    "        print(Query)\n",
+    "        print(\"---------------------------\\n\")\n",
+    "\n",
+    "        # 3. Ejecutar la consulta\n",
+    "        print(\"Ejecutando la consulta...\")\n",
+    "        cur.execute(Query)\n",
+    "        dfi1 = pd.read_sql_query(Query, conn)\n",
+    "except psycopg2.Error as e:\n",
+    "    print(f\"\\n¡Error de base de datos! Detalles: {e}\")\n",
+    "    print(\"Asegúrate de que la base de datos esté corriendo y tus credenciales sean correctas.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"\\n¡Ocurrió un error inesperado! Detalles: {e}\")\n",
+    "finally:\n",
+    "    # Asegúrate de cerrar el cursor y la conexión\n",
+    "    if cur:\n",
+    "        cur.close()\n",
+    "        print(\"Cursor cerrado.\")\n",
+    "    if conn:\n",
+    "        conn.close()\n",
+    "        print(\"Conexión a la base de datos cerrada.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "556a664e",
+   "metadata": {},
+   "source": [
+    "### Carga Hojas de Calculo 📊"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7bfda0e1",
+   "execution_count": 46,
+   "id": "44d83e04",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'credenciales' has no attribute 'HOST'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# CONEXION BASE DE DATOS\u001b[39;00m\n\u001b[32m      2\u001b[39m conn = psycopg2.connect(\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m       host=\u001b[43mcredenciales\u001b[49m\u001b[43m.\u001b[49m\u001b[43mHOST\u001b[49m,\n\u001b[32m      4\u001b[39m       port=credenciales.PORT,\n\u001b[32m      5\u001b[39m       database=credenciales.DATA_BASE,\n\u001b[32m      6\u001b[39m       user=credenciales.USER,\n\u001b[32m      7\u001b[39m       password=credenciales.PASSWORD\n\u001b[32m      8\u001b[39m )\n",
-      "\u001b[31mAttributeError\u001b[39m: module 'credenciales' has no attribute 'HOST'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hoja 'Eventos SIELP' de 'xlsx_files\\Eventos_SIELP.xlsx' cargada en DataFrame.\n"
      ]
     }
    ],
    "source": [
-    "# CONEXION BASE DE DATOS\n",
-    "conn = psycopg2.connect(\n",
-    "      host=credenciales.HOST,\n",
-    "      port=credenciales.PORT,\n",
-    "      database=credenciales.DATA_BASE,\n",
-    "      user=credenciales.USER,\n",
-    "      password=credenciales.PASSWORD\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0abbcf3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Consulta SQL\n",
-    "sql4 = '''\n",
-    "WITH DatosOrdenados AS (\n",
-    "  SELECT\n",
-    "    c.idexcel, \n",
-    "    c.nombreexcel,\n",
-    "    e.nomempresa AS nom_empresa,\n",
-    "    t.sigla_terminal AS nom_terminal,\n",
-    "    s2.idtipo,\n",
-    "    TO_CHAR(s.finicio, 'YYYYMM') AS fechasol,\n",
-    "    c.created_at,\n",
-    "    ROW_NUMBER() OVER(\n",
-    "      PARTITION BY e.nomempresa, t.sigla_terminal, s2.idtipo, TO_CHAR(s.finicio, 'YYYYMM') \n",
-    "      ORDER BY c.created_at\n",
-    "    ) AS rn\n",
-    "  FROM db_sielp.api.cargaexcel c\n",
-    "  INNER JOIN db_sielp.api.historialsolicitud h ON h.idexcel = c.idexcel\n",
-    "  INNER JOIN db_sielp.api.solempresas s ON s.id = h.idsolicitudempresa\n",
-    "  INNER JOIN db_sielp.api.solicitudes s2 ON s.idsolicitud = s2.id\n",
-    "  INNER JOIN db_sielp.api.empresas e ON e.id = s.idempresa\n",
-    "  INNER JOIN db_sielp.api.terminales t ON t.id_terminal = s.idterminal\n",
-    "  WHERE\n",
-    "   s.finicio  BETWEEN  %(start_date_q4)s AND %(end_date_q4)s\n",
-    ")\n",
-    "select\n",
-    "\td.*,\n",
-    "    p.*\n",
-    "FROM \n",
-    "    DatosOrdenados d\n",
-    "JOIN \n",
-    "    db_sielp.api.cargaexceltmp tmp ON tmp.idexcel = d.idexcel\n",
-    "CROSS JOIN LATERAL\n",
-    "jsonb_to_record(tmp.data::jsonb) AS p(\n",
-    "    id text,\n",
-    "    terminal text,\n",
-    "    largo_muelle text, -- Campo adicional único del segundo objeto JSON\n",
-    "    largo_lap text,\n",
-    "    gruas_portico text, -- Campo adicional único del segundo objeto JSON\n",
-    "    enchufes_reefer_fijos text,\n",
-    "    enchufes_reefer_moviles text,\n",
-    "    area_total text,\n",
-    "    area_contenedor text,\n",
-    "    area_fraccionada text,\n",
-    "    area_granel_solido text,\n",
-    "    area_extension text,\n",
-    "    calado_maximo text,\n",
-    "    observaciones text\n",
-    "    )\n",
-    "WHERE \n",
-    "    d.rn = 1 \n",
-    "    AND d.idtipo in (12,4,18)\n",
-    "    AND p.terminal = %(current_terminal)s\n",
-    " \n",
+    "file_path = r'xlsx_files\\Eventos_SIELP.xlsx' \n",
+    "sheet_name = 'Eventos SIELP' \n",
     "\n",
+    "df = None \n",
     "\n",
-    "'''\n",
-    "\n",
-    "dfi1 = pd.read_sql_query(sql4, conn, params=params)\n",
-    "dfi1 = dfi1.iloc[:, 8:]\n",
-    "conn.close()"
+    "if os.path.exists(file_path):\n",
+    "    try:\n",
+    "        df = pd.read_excel(file_path, sheet_name=sheet_name)\n",
+    "        print(f\"Hoja '{sheet_name}' de '{file_path}' cargada en DataFrame.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error al cargar Excel: {e}\")\n",
+    "else:\n",
+    "    print(f\"Error: Archivo no encontrado en '{file_path}'\")\n"
    ]
   },
   {
